[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entities/CelestialBody/Planet/Texture/Base.png" type="Texture" id=1]
[ext_resource path="res://Entities/CelestialBody/StateMachine/CelestialStateMachine.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/CelestialBody/Planet/Planet.gd" type="Script" id=3]
[ext_resource path="res://Entities/Debug/StateNameDisplayer.tscn" type="PackedScene" id=4]

[sub_resource type="PhysicsMaterial" id=1]
rough = true
bounce = 0.5

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[sub_resource type="CircleShape2D" id=3]
radius = 128.0

[node name="Planet" type="RigidBody2D" groups=[
"planets",
]]
physics_material_override = SubResource( 1 )
contacts_reported = 1
contact_monitor = true
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 7
hframes = 4
frame = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="CelestialStateMachine" parent="." instance=ExtResource( 2 )]

[node name="CelestialState" parent="." instance=ExtResource( 4 )]
margin_left = -24.0
margin_top = -48.0
margin_right = 16.0
margin_bottom = -34.0

[node name="Tween" type="Tween" parent="."]

[node name="Orbit" type="Area2D" parent="."]
space_override = 1
gravity_point = true
gravity_vec = Vector2( 0, 0 )
linear_damp = 30.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Orbit"]
shape = SubResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="change_sprite" from="CelestialStateMachine" to="." method="_on_change_sprite"]
[connection signal="state_changed" from="CelestialStateMachine" to="CelestialState" method="_on_state_changed"]
